deploy: 1ddcb6b635186beb8659ae7fb914f1436c8b0614

--- a/brands/all-clad/index.html
+++ b/brands/all-clad/index.html
@@ -116,7 +116,7 @@ appliances, have varying origins.</p>
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.groupeseb.com/en target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.groupeseb.com/en target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Groupe SEB</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -125,7 +125,7 @@ appliances, have varying origins.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.all-clad.com/ target=_blank>
-<a rel=noreferrer href=https://www.all-clad.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.all-clad.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>All-Clad</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
