--- a/brands/braun/index.html
+++ b/brands/braun/index.html
@@ -70,7 +70,8 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 </span>
 </div>
 <p>Braun manufactures a line of shaving and hair care products, made in Germany.
-They are also the parent company of <a href=https://madewhere.co/brands/oral-b/>Oral-B</a>, which provides a line of electric
+They are also the parent company of
+<a href=https://madewhere.co/brands/oral-b/>Oral-B</a>, which provides a line of electric
 toothbrushes.</p>
 <p class="f3 b mb1 ttc">Subsidiaries</p>
 <ul class="pa0 mt0 list">
@@ -103,7 +104,7 @@ toothbrushes.</p>
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.pggoodeveryday.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.pggoodeveryday.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Proctor & Gamble</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -112,7 +113,7 @@ toothbrushes.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://us.braun.com/en-us/ target=_blank>
-<a rel=noreferrer href=https://us.braun.com/en-us/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://us.braun.com/en-us/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Braun</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
