--- a/brands/chicago-metallic/index.html
+++ b/brands/chicago-metallic/index.html
@@ -107,7 +107,7 @@ asserts that all products are made in the USA, with global materials.</p>
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.bundybakingsolutions.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.bundybakingsolutions.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Bundy Baking Solutions</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -124,7 +124,7 @@ asserts that all products are made in the USA, with global materials.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.cmbakeware.com/ target=_blank>
-<a rel=noreferrer href=https://www.cmbakeware.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.cmbakeware.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Chicago Metallic</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
