--- a/brands/emile-henry/index.html
+++ b/brands/emile-henry/index.html
@@ -70,7 +70,8 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 </span>
 </div>
 <p>Émile Henry is a ceramics manufacturer in France, best known for their bakeware.</p>
-<p>In the United States, they are affiliated with <a href=https://madewhere.co/brands/duralex/>Duralex</a> although that
+<p>In the United States, they are affiliated with
+<a href=https://madewhere.co/brands/duralex/>Duralex</a> although that
 affiliation isn&rsquo;t clear: it may just be the US distributor is the same company.</p>
 <ul class=pa0>
 </ul>
@@ -108,7 +109,7 @@ affiliation isn&rsquo;t clear: it may just be the US distributor is the same com
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.emilehenryusa.com/ target=_blank>
-<a rel=noreferrer href=https://www.emilehenryusa.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.emilehenryusa.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Émile Henry</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
