--- a/brands/field-notes/index.html
+++ b/brands/field-notes/index.html
@@ -99,7 +99,7 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://fieldnotesbrand.com/ target=_blank>
-<a rel=noreferrer href=https://fieldnotesbrand.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://fieldnotesbrand.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Field Notes</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
