--- a/brands/fletchers-mill/index.html
+++ b/brands/fletchers-mill/index.html
@@ -100,7 +100,7 @@ wooden tools such as rolling pins, honey dippers, and etc.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://fletchersmill.com/ target=_blank>
-<a rel=noreferrer href=https://fletchersmill.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://fletchersmill.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Fletchers' Mill</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
