--- a/brands/heath-ceramics/index.html
+++ b/brands/heath-ceramics/index.html
@@ -77,7 +77,8 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 California factory. They&rsquo;ve recently started producing other products, like
 flatware. They also carry a significant number of other items which seem
 carefully selected, but haven&rsquo;t been comprehensively evaluated.</p>
-<p>See their <a href=https://madewhere.co/vendors/heath-ceramics/>vendor</a> page for more information.</p>
+<p>See their
+<a href=https://madewhere.co/vendors/heath-ceramics/>vendor</a> page for more information.</p>
 <ul class=pa0>
 <li class=list>
 <a href=/tags/mixed-origin class="link f5 grow no-underline br-pill ba ph3 pv2 mb2 dib black sans-serif">mixed-origin</a>
@@ -140,7 +141,7 @@ carefully selected, but haven&rsquo;t been comprehensively evaluated.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.heathceramics.com/ target=_blank>
-<a rel=noreferrer href=https://www.heathceramics.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.heathceramics.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Heath Ceramics</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
