--- a/brands/liberty-tabletop/index.html
+++ b/brands/liberty-tabletop/index.html
@@ -69,7 +69,8 @@ BRANDS
 This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a> improve it!
 </span>
 </div>
-<p>Liberty Tabletop is a flatware manufacturer, which is a subsidiary of <a href=https://madewhere.co/brands/sherrill-manufacturing/>Sherrill
+<p>Liberty Tabletop is a flatware manufacturer, which is a subsidiary of
+<a href=https://madewhere.co/brands/sherrill-manufacturing/>Sherrill
 Manufacturing</a>.</p>
 <ul class=pa0>
 </ul>
@@ -110,7 +111,7 @@ Manufacturing</a>.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.libertytabletop.com/specials/ target=_blank>
-<a rel=noreferrer href=https://www.libertytabletop.com/specials/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.libertytabletop.com/specials/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Liberty Tabletop</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
