--- a/brands/lloydpans/index.html
+++ b/brands/lloydpans/index.html
@@ -102,7 +102,7 @@ pizza pans, made in the USA.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://lloydpanskitchenware.com/ target=_blank>
-<a rel=noreferrer href=https://lloydpanskitchenware.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://lloydpanskitchenware.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>LloydPans</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
