--- a/brands/moccamaster/index.html
+++ b/brands/moccamaster/index.html
@@ -105,7 +105,7 @@ in the Netherlands.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://us.moccamaster.com/ target=_blank>
-<a rel=noreferrer href=https://us.moccamaster.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://us.moccamaster.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Moccamaster</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
