--- a/brands/north-st/index.html
+++ b/brands/north-st/index.html
@@ -103,7 +103,7 @@ gear. Many of their products are made to order.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://northstbags.com/ target=_blank>
-<a rel=noreferrer href=https://northstbags.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://northstbags.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>North St.</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
