--- a/brands/oral-b/index.html
+++ b/brands/oral-b/index.html
@@ -105,7 +105,7 @@ prominently list the origin of each product on their website.</p>
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.pggoodeveryday.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.pggoodeveryday.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Proctor & Gamble</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -114,7 +114,7 @@ prominently list the origin of each product on their website.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://oralb.com/ target=_blank>
-<a rel=noreferrer href=https://oralb.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://oralb.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Oral-B</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
