--- a/brands/redwood-classics/index.html
+++ b/brands/redwood-classics/index.html
@@ -98,7 +98,7 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.wsandcompany.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.wsandcompany.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>WS & Co.</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -107,7 +107,7 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://redwoodclassics.net/ target=_blank>
-<a rel=noreferrer href=https://redwoodclassics.net/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://redwoodclassics.net/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Redwood Classics</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
