--- a/brands/tanner-goods/index.html
+++ b/brands/tanner-goods/index.html
@@ -116,7 +116,7 @@ carry US-made products.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.tannergoods.com/ target=_blank>
-<a rel=noreferrer href=https://www.tannergoods.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.tannergoods.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Tanner Goods</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
