--- a/brands/usa-pan/index.html
+++ b/brands/usa-pan/index.html
@@ -101,7 +101,7 @@ baking sheets, muffin tins, loaf pans, etc.</p>
 <p class="f5 b mb1 ttc">parent</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
-<a rel=noreferrer href=https://www.bundybakingsolutions.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.bundybakingsolutions.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Bundy Baking Solutions</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </li>
@@ -110,7 +110,7 @@ baking sheets, muffin tins, loaf pans, etc.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.usapan.com/ target=_blank>
-<a rel=noreferrer href=https://www.usapan.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.usapan.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>USA Pan</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
