--- a/brands/zwilling/index.html
+++ b/brands/zwilling/index.html
@@ -70,7 +70,8 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 </span>
 </div>
 <p>ZWILLING J.A. Henckles is the parent company of several brands, including
-<a href=https://madewhere.co/brands/staub/>Staub</a> and <a href=https://madewhere.co/brands/demeyere/>Demeyere</a>.</p>
+<a href=https://madewhere.co/brands/staub/>Staub</a> and
+<a href=https://madewhere.co/brands/demeyere/>Demeyere</a>.</p>
 <p class="f3 b mb1 ttc">Subsidiaries</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
@@ -109,7 +110,7 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.zwilling.com/ target=_blank>
-<a rel=noreferrer href=https://www.zwilling.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.zwilling.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Zwilling</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
