--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ A website dedicated to quality, fairly made goods.
 </header>
 <main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-<p>A website dedicated to quality, fairly made goods. Read more <a href=https://madewhere.co/about/>about us</a>,
+<p>A website dedicated to quality, fairly made goods. Read more
+<a href=https://madewhere.co/about/>about us</a>,
 <a href=https://madewhere.co/contribute/>contribute</a> to our list, or start browsing.</p>
 </article>
 <div class="ph3 ph4-ns pv2 w-100 w-70-ns center">
