--- a/brands/birkenstock/index.html
+++ b/brands/birkenstock/index.html
@@ -110,7 +110,7 @@ shoes—are made in Germany. Other products have varying origins.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.birkenstock.com/us target=_blank>
-<a rel=noreferrer href=https://www.birkenstock.com/us target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.birkenstock.com/us target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Birkenstock US</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
