--- a/brands/bormioli-rocco/index.html
+++ b/brands/bormioli-rocco/index.html
@@ -100,7 +100,7 @@ glassware, including: tableware, canning and preserving, and storage jars.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.bormiolirocco.com/en/ target=_blank>
-<a rel=noreferrer href=https://www.bormiolirocco.com/en/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.bormiolirocco.com/en/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Bormioli Rocco</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
