--- a/brands/channellock/index.html
+++ b/brands/channellock/index.html
@@ -124,7 +124,7 @@ their origins on product pages.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://channellock.com/ target=_blank>
-<a rel=noreferrer href=https://channellock.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://channellock.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Channellock</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
