--- a/brands/d-addario/index.html
+++ b/brands/d-addario/index.html
@@ -100,7 +100,7 @@ makes all of their products in the USA.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.daddario.com/ target=_blank>
-<a rel=noreferrer href=https://www.daddario.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.daddario.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>D'Addario</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
