--- a/brands/estwing/index.html
+++ b/brands/estwing/index.html
@@ -109,7 +109,7 @@ plastic hammers which are made in Taiwan.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.estwing.com/ target=_blank>
-<a rel=noreferrer href=https://www.estwing.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.estwing.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Estwing</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
