--- a/brands/graf-lantz/index.html
+++ b/brands/graf-lantz/index.html
@@ -118,7 +118,7 @@ desk mats, sunglass cases, tote bags, face masks, etc.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://graf-lantz.com/ target=_blank>
-<a rel=noreferrer href=https://graf-lantz.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://graf-lantz.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Graf Lantz</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
