--- a/brands/john-boos/index.html
+++ b/brands/john-boos/index.html
@@ -107,7 +107,7 @@ installer materials, like full butcher block counter tops.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.johnboos.com/ target=_blank>
-<a rel=noreferrer href=https://www.johnboos.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.johnboos.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>John Boos & Co.</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
