--- a/brands/lamson/index.html
+++ b/brands/lamson/index.html
@@ -100,7 +100,7 @@ Massachusetts factory.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://lamsonproducts.com/ target=_blank>
-<a rel=noreferrer href=https://lamsonproducts.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://lamsonproducts.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Lamson Products</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
