--- a/brands/le-cruset/index.html
+++ b/brands/le-cruset/index.html
@@ -140,7 +140,7 @@ product lines vary in origin.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.lecreuset.com/ target=_blank>
-<a rel=noreferrer href=https://www.lecreuset.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.lecreuset.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Le Creuset</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
