--- a/brands/moonstar/index.html
+++ b/brands/moonstar/index.html
@@ -115,7 +115,7 @@ This article is a stub. You can <a href=https://madewhere.co/contribute/>help</a
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://en.moonstar-manufacturing.jp/ target=_blank>
-<a rel=noreferrer href=https://en.moonstar-manufacturing.jp/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://en.moonstar-manufacturing.jp/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>MoonStar Manufacturing</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
