--- a/brands/nab-leather/index.html
+++ b/brands/nab-leather/index.html
@@ -102,7 +102,7 @@ belts, wallets, and other accessories.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://nableather.com/ target=_blank>
-<a rel=noreferrer href=https://nableather.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://nableather.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Nab Leather Co</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
