--- a/brands/peugeot-saveurs/index.html
+++ b/brands/peugeot-saveurs/index.html
@@ -97,7 +97,7 @@ of kitchen products.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://us.peugeot-saveurs.com/en_us/ target=_blank>
-<a rel=noreferrer href=https://us.peugeot-saveurs.com/en_us/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://us.peugeot-saveurs.com/en_us/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Peugeot Saveurs</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
