--- a/brands/red-wing/index.html
+++ b/brands/red-wing/index.html
@@ -114,7 +114,7 @@ and boots which are of varying origins.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.redwingshoes.com/heritage/ target=_blank>
-<a rel=noreferrer href=https://www.redwingshoes.com/heritage/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.redwingshoes.com/heritage/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Red Wing Heritage</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
