--- a/brands/rogue-territory/index.html
+++ b/brands/rogue-territory/index.html
@@ -97,7 +97,7 @@ make denim jeans, jackets, shirts, and accessories.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.rogueterritory.com/ target=_blank>
-<a rel=noreferrer href=https://www.rogueterritory.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.rogueterritory.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Rogue Territory</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
