--- a/brands/sherrill-manufacturing/index.html
+++ b/brands/sherrill-manufacturing/index.html
@@ -107,7 +107,7 @@ products in the USA.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.sherrillmfg.com/ target=_blank>
-<a rel=noreferrer href=https://www.sherrillmfg.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.sherrillmfg.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Sherrill Manufacturing</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
