--- a/brands/solidteknics/index.html
+++ b/brands/solidteknics/index.html
@@ -111,14 +111,14 @@ these markets.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://solidteknicsusa.com/ target=_blank>
-<a rel=noreferrer href=https://solidteknicsusa.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://solidteknicsusa.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Solidteknics USA</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
 </li>
 <li class=mb2>
 <a href=https://www.solidteknics.com/ target=_blank>
-<a rel=noreferrer href=https://www.solidteknics.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.solidteknics.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Solidteknics AU</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
