--- a/brands/vitamix/index.html
+++ b/brands/vitamix/index.html
@@ -114,7 +114,7 @@ individual pages.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.vitamix.com/us/en_us/ target=_blank>
-<a rel=noreferrer href=https://www.vitamix.com/us/en_us/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.vitamix.com/us/en_us/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Vitamix</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
