--- a/brands/vollrath/index.html
+++ b/brands/vollrath/index.html
@@ -137,7 +137,7 @@ products.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.vollrathfoodservice.com/ target=_blank>
-<a rel=noreferrer href=https://www.vollrathfoodservice.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.vollrathfoodservice.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Vollrath Food Service</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
