--- a/brands/zojirushi/index.html
+++ b/brands/zojirushi/index.html
@@ -115,7 +115,7 @@ containers, but their country of origin varies.</p>
 <ul class="pa0 mt0 list">
 <li class=mb2>
 <a href=https://www.zojirushi.com/ target=_blank>
-<a rel=noreferrer href=https://www.zojirushi.com/ target=_blank class="no-underline flex items-center justify-left">
+<a rel=noreferrer href=https://www.zojirushi.com/ target=_blank class="no-underline inline-flex items-center justify-left">
 <span class=underline>Zojirushi</span><svg class="w1 h1 pl1"><use href="#fa-external-link-alt"/></svg>
 </a>
 </a>
