deploy: 37187dc9891631776908777defa0155556bd79d9

--- a/brands/index.html
+++ b/brands/index.html
@@ -318,6 +318,20 @@ Estwing is a tool manufacturer, specializing in hammers. A large number of their
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/felco/ class="link black dim">
+Felco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Felco is a Swiss garden tools manufacturer. They make a variety of shears, loppers, and other outdoor tools. Products origins are prominently listed on their individual pages.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/field-notes/ class="link black dim">
 Field Notes
 </a>
@@ -488,6 +502,20 @@ LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and p
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/marleys-monsters/ class="link black dim">
+Marley's Monsters
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Marley&rsquo;s Monsters provides a wide range of reusable cloth products—towels, napkins, coffee filters—meant to reduce use of paper disposables. They produce their goods in Eugene, Oregon.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/mission-workshop/ class="link black dim">
 Mission Workshop
 </a>
@@ -544,6 +572,20 @@ Nab Leather Co is a leather goods manufacturer in Ontario, Canada. They produce 
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/naked-and-famous/ class="link black dim">
+Naked & Famous
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Naked & Famous is a Canadian clothing manufacturer, specializing in Canada-sewn Japanese denim. In addition to their flagship lines of jeans and jackets, they offer tops and other pieces.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/north-st/ class="link black dim">
 North St.
 </a>
@@ -592,6 +634,20 @@ Picquic
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Picquic is a Canadian tool manufacturer, specializing in multi-bit screwdrivers.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/raber/ class="link black dim">
+Raber
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Raber is a Canadian glove manufacturer, specializing in leather gloves.
 </div>
 </div>
 </div>
@@ -677,62 +733,6 @@ Sherrill Manufacturing
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Sherrill Manufacturing is the parent company of several brands listed below. They purchased the former Oneida Limited facilities, and continue making products in the USA.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/shoes-like-pottery/ class="link black dim">
-Shoes Like Pottery
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Shoes Like Pottery makes casual low and high top sneakers. As with all MoonStar sneakers, they are made in Japan.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/solidteknics/ class="link black dim">
-Solidteknics
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Solidteknics is a manufacturer with seemingly two independent arms: one in Australia, and one in the USA. They manufacture wrought iron cookware in each of these markets.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/stanfields/ class="link black dim">
-Stanfield's
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Stanfield&rsquo;s is a Canadian clothing manufacturer. They produce a wide range of clothing from underwear to outerwear, as well as a line of wool clothing, from their Nova Scotia factories.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/staub/ class="link black dim">
-Staub
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Staub is a cookware manufacturer specializing in cast iron pans and dutch ovens.
 </div>
 </div>
 </div>
