--- a/index.html
+++ b/index.html
@@ -119,6 +119,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/garden/>
+<span class=ttc>garden</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/categories/glassware/>
 <span class=ttc>glassware</span>
 </a>
@@ -240,6 +245,11 @@ A website dedicated to quality, fairly made goods.
 </a>
 </li>
 <li class="dib mr1 mb2">
+<a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/switzerland/>
+<span class=ttc>switzerland</span>
+</a>
+</li>
+<li class="dib mr1 mb2">
 <a class="b db pa2 link dim dark-gray ba b--black-20" href=/origins/taiwan/>
 <span class=ttc>taiwan</span>
 </a>
@@ -277,14 +287,14 @@ Recent Brands
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/lloydpans/ class="color-inherit dim link">
-LloydPans
+<a href=/brands/naked-and-famous/ class="color-inherit dim link">
+Naked & Famous
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and pizza pans, made in the USA.
+Naked & Famous is a Canadian clothing manufacturer, specializing in Canada-sewn Japanese denim. In addition to their flagship lines of jeans and jackets, they offer tops and other pieces.
 </div>
-<a href=/brands/lloydpans/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/naked-and-famous/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -296,14 +306,14 @@ LloydPans is a kitchenware manufacturer, offering fry pans, baking sheets, and p
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/weck/ class="color-inherit dim link">
-Weck
+<a href=/brands/raber/ class="color-inherit dim link">
+Raber
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Weck produces a variety of canning and storage jars in Germany.
+Raber is a Canadian glove manufacturer, specializing in leather gloves.
 </div>
-<a href=/brands/weck/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/raber/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -315,14 +325,14 @@ Weck produces a variety of canning and storage jars in Germany.
 <div class="flex flex-column flex-row-ns">
 <div class="blah w-100">
 <h1 class="f3 fw1 athelas mt0 lh-title">
-<a href=/brands/bormioli-rocco/ class="color-inherit dim link">
-Bormioli Rocco
+<a href=/brands/wilcox/ class="color-inherit dim link">
+Wilcox
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Bormioli Rocco is an Italian glassware manufacturer. They make a variety of glassware, including: tableware, canning and preserving, and storage jars.
+Wilcox is a garden tool manufacturer, specializing in digging tools.
 </div>
-<a href=/brands/bormioli-rocco/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
+<a href=/brands/wilcox/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
 </div>
 </div>
@@ -332,23 +342,23 @@ Bormioli Rocco is an Italian glassware manufacturer. They make a variety of glas
 <section class=w-100>
 <h1 class=f3>More</h1>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/picquic/ class="link black dim">
-Picquic
+<a href=/brands/felco/ class="link black dim">
+Felco
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/white-industries/ class="link black dim">
-White Industries
+<a href=/brands/marleys-monsters/ class="link black dim">
+Marley's Monsters
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/chris-king/ class="link black dim">
-Chris King
+<a href=/brands/lloydpans/ class="link black dim">
+LloydPans
 </a>
 </h2>
 <h2 class="f5 fw4 mb4 dib mr3">
-<a href=/brands/dehen-1920/ class="link black dim">
-Dehen 1920
+<a href=/brands/weck/ class="link black dim">
+Weck
 </a>
 </h2>
 <a href=/brands/ class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All Brands</a>
