--- a/origins/index.html
+++ b/origins/index.html
@@ -128,6 +128,32 @@ Canada
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/naked-and-famous/ class="link black dim">
+Naked & Famous
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Naked & Famous is a Canadian clothing manufacturer, specializing in Canada-sewn Japanese denim. In addition to their flagship lines of jeans and jackets, they offer tops and other pieces.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/raber/ class="link black dim">
+Raber
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Raber is a Canadian glove manufacturer, specializing in leather gloves.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/picquic/ class="link black dim">
 Picquic
 </a>
@@ -234,6 +260,19 @@ Casual wear manufacturer based in Canada.
 China
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/felco/ class="link black dim">
+Felco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Felco is a Swiss garden tools manufacturer. They make a variety of shears, loppers, and other outdoor tools. Products origins are prominently listed on their individual pages.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
@@ -644,6 +683,19 @@ Japan
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/naked-and-famous/ class="link black dim">
+Naked & Famous
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Naked & Famous is a Canadian clothing manufacturer, specializing in Canada-sewn Japanese denim. In addition to their flagship lines of jeans and jackets, they offer tops and other pieces.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/zero-japan/ class="link black dim">
 Zero Japan
 </a>
@@ -753,6 +805,24 @@ Mission Workshop
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Mission Workshop is a San Francisco-based maker of bags and technical clothing; they focused mostly on bike gear, but have since diversified into more technical wear.
+</div>
+</div>
+</div>
+<h2 class=f1>
+<a href=/origins/switzerland/ class="link blue hover-black">
+switzerland
+</a>
+</h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/felco/ class="link black dim">
+Felco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Felco is a Swiss garden tools manufacturer. They make a variety of shears, loppers, and other outdoor tools. Products origins are prominently listed on their individual pages.
 </div>
 </div>
 </div>
@@ -915,6 +985,32 @@ Zojirushi is probably best known for their rice cookers, but they make a conside
 USA
 </a>
 </h2>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/wilcox/ class="link black dim">
+Wilcox
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Wilcox is a garden tool manufacturer, specializing in digging tools.
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/marleys-monsters/ class="link black dim">
+Marley's Monsters
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Marley&rsquo;s Monsters provides a wide range of reusable cloth products—towels, napkins, coffee filters—meant to reduce use of paper disposables. They produce their goods in Eugene, Oregon.
+</div>
+</div>
+</div>
 <div class="relative w-100 mb4 bg-white nested-copy-line-height">
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
