--- a/origins/switzerland/index.html
+++ b/origins/switzerland/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Outdoor | madewhere</title>
+<title>switzerland | madewhere</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content>
 <meta name=generator content="Hugo 0.92.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/categories/outdoor/index.xml rel=alternate type=application/rss+xml title=madewhere>
-<link href=/categories/outdoor/index.xml rel=feed type=application/rss+xml title=madewhere>
-<meta property="og:title" content="Outdoor">
+<link href=/origins/switzerland/index.xml rel=alternate type=application/rss+xml title=madewhere>
+<link href=/origins/switzerland/index.xml rel=feed type=application/rss+xml title=madewhere>
+<meta property="og:title" content="switzerland">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://madewhere.co/categories/outdoor/">
-<meta itemprop=name content="Outdoor">
+<meta property="og:url" content="https://madewhere.co/origins/switzerland/">
+<meta itemprop=name content="switzerland">
 <meta itemprop=description content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Outdoor">
+<meta name=twitter:title content="switzerland">
 <meta name=twitter:description content>
 <meta name=referrer content="no-referrer">
 <link rel="shortcut icon" type=image/png href=favicon.png>
@@ -49,7 +49,7 @@ Vendors
 </nav>
 <div class=tc-l>
 <h1 class=dn>
-Outdoor
+switzerland
 </h1>
 </div>
 </div>
@@ -66,57 +66,12 @@ Outdoor
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
-<a href=/brands/wilcox/ class="link black dim">
-Wilcox
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Wilcox is a garden tool manufacturer, specializing in digging tools.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
 <a href=/brands/felco/ class="link black dim">
 Felco
 </a>
 </h1>
 <div class="nested-links f5 lh-copy nested-copy-line-height">
 Felco is a Swiss garden tools manufacturer. They make a variety of shears, loppers, and other outdoor tools. Products origins are prominently listed on their individual pages.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/lawn-chair-usa/ class="link black dim">
-Lawn Chair USA
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Lawn Chair USA manufactures classic styled lawn chairs in the USA, as their name suggests.
-</div>
-</div>
-</div>
-</div>
-<div class="relative w-100 mb4 bg-white">
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Brands</span>
-<h1 class="f3 near-black">
-<a href=/brands/benchmade/ class="link black dim">
-Benchmade
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-Benchmade is an American knife manufacturer, which produces a wide range of knives in their Oregon City, OR factory. Since discontinuing their off-shore manufacturing in 2010, all of their products are USA-made.
 </div>
 </div>
 </div>
