--- a/origins/usa/index.html
+++ b/origins/usa/index.html
@@ -69,6 +69,36 @@ Products made in the United States of America.
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/wilcox/ class="link black dim">
+Wilcox
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Wilcox is a garden tool manufacturer, specializing in digging tools.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
+<a href=/brands/marleys-monsters/ class="link black dim">
+Marley's Monsters
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Marley&rsquo;s Monsters provides a wide range of reusable cloth products—towels, napkins, coffee filters—meant to reduce use of paper disposables. They produce their goods in Eugene, Oregon.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/lloydpans/ class="link black dim">
 LloydPans
 </a>
