--- a/origins/china/index.html
+++ b/origins/china/index.html
@@ -66,6 +66,21 @@ China
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/felco/ class="link black dim">
+Felco
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Felco is a Swiss garden tools manufacturer. They make a variety of shears, loppers, and other outdoor tools. Products origins are prominently listed on their individual pages.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/vitamix/ class="link black dim">
 Vitamix
 </a>
