--- a/origins/japan/index.html
+++ b/origins/japan/index.html
@@ -66,6 +66,21 @@ Japan
 <div class="bg-white mb3 pa4 gray overflow-hidden">
 <span class="f6 db">Brands</span>
 <h1 class="f3 near-black">
+<a href=/brands/naked-and-famous/ class="link black dim">
+Naked & Famous
+</a>
+</h1>
+<div class="nested-links f5 lh-copy nested-copy-line-height">
+Naked & Famous is a Canadian clothing manufacturer, specializing in Canada-sewn Japanese denim. In addition to their flagship lines of jeans and jackets, they offer tops and other pieces.
+</div>
+</div>
+</div>
+</div>
+<div class="relative w-100 mb4 bg-white">
+<div class="relative w-100 mb4 bg-white nested-copy-line-height">
+<div class="bg-white mb3 pa4 gray overflow-hidden">
+<span class="f6 db">Brands</span>
+<h1 class="f3 near-black">
 <a href=/brands/zero-japan/ class="link black dim">
 Zero Japan
 </a>
